style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

/* CSS starts */
body {
    font-family: roboto;
}

header {
    background-color: rgb(0, 166, 255);
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.logo {
    color: white;
    font-size: 1.8rem;
    font-weight: 600;
    text-decoration: none;
}
.quoteContainer {
    margin-top: 25px;
    margin: 25px 50px;
}
#quotePlaceHolder {
    font-size: 1.3rem;
    line-height: 30px;
    margin-bottom: 15px;
}
.quoteContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
}

#authorPlaceHolder {
    font-size: 1.4rem;
    font-weight: 600;
    font-style: italic;
    margin-bottom: 40px;
}
#getBtn, #copyText {
    padding: 15px 25px;
    font-size: 1rem;
    border: none;
    background-color: rgb(0, 166, 255);
    color: #fff;
    font-weight: 600;
    border-radius: 15px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    margin-left: 20px;
}
#getBtn:hover, #copyText:hover {
    box-shadow: 0 5px 20px rgb(0, 166, 255);
}


footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: rgb(42, 42, 42);
    color: white;
    text-align: center;
    padding: 50px;
    font-size: 1.2rem;
  }
  .pro-link {
    color: white;
  }

  #copy {
    text-align: center;
    margin-top: 15px;
    font-size: .9rem;
  }


  /* Mobile */
  @media only screen and (max-width: 600px) {
    #quotePlaceHolder {
        font-size: 1.2rem;
        line-height: 28px;
    }
    #getBtn {
        margin-bottom: 20px;
    }
  }

